Apartado 3.3 scikit-learn

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -275,4 +275,11 @@
   year      = {2018},
 }
 
+@InProceedings{Pedregosa2011,
+  author    = {F. Pedregosa, G. Varoquaux, A. Gramfort},
+  title     = {Scikit-learn: Machine learning in Python},
+  booktitle = {JMLR},
+  year      = {2011},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
