--- a/capitulos/EstadoArte.tex
+++ b/capitulos/EstadoArte.tex
@@ -76,7 +76,7 @@ Existen numerosos tipos de algoritmos de clasificación, a continuación se indica
 	\itemsep0em 
 	\item Naive Bayes: Está basado en la teoría de la decisión de Bayes: la teoría de las probabilidades condicionadas. Por tanto, el problema de la clasificación se reduce al cálculo de las probabilidades a posteriori de una clase dado un documento.
 	\item Arboles de decisión: Se trata de un método que a través de un proceso recursivo de las los atributos de entrada, realiza una representación para clasificar el conjunto de datos presentado.
-	\item Máquinas de vectores de soporte: Estos algoritmos pretenden encontrar una hipersuperficie de separación entre clases dentro del espacio de representación.
+	\item Máquinas de vectores de soporte (``Support Vector Machine'', SVM): Estos algoritmos pretenden encontrar una hipersuperficie de separación entre clases dentro del espacio de representación.
 	\item Redes Neuronales: Son un modelo computacional compuesto por elementos ("neuronas") interconectados entre sí que aplican una transformación a los datos para producir una salida. Es posible entrenar una red neuronal para que dada una entrada determinada (un vector de representación) produzca una salida deseada (la categoría a la que corresponde ese documento).
 	\item KNN (K-Nearest Neighbour): Este algoritmo se basa en la aplicación de una métrica que establezca la similitud entre un documento que se quiere clasificar y cada uno de los documentos de entrenamiento. La clase o categoría que se asigna al documento sería la categoría del documento más cercano según la métrica establecida.
 \end{itemize}
