--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -220,6 +220,7 @@ Finalmente, se identifican algunos problemas y líneas de trabajo futuras.
 \input{capitulos/Introduccion}
 \input{capitulos/EstadoArte}
 \input{capitulos/Herramientas_utilizadas}
+\input{capitulos/Corpus}
 \input{capitulos/Sistema_Metodo_Caso_de_Estudio}
 \input{capitulos/Evaluacion}
 \input{capitulos/Discusion}
