Se añaden ejemplos machistas Capitulo 4 Corpus

--- a/capitulos/Corpus.tex
+++ b/capitulos/Corpus.tex
@@ -50,12 +50,263 @@ Existen refranes, dichos populares y tópicos que se utilizan diariamente refuerz
 
 Pese a que, como se ha presentado, existen gran cantidad de expresiones que conllevan actitudes machistas generalmente, ha sido necesario recoger ciertos términos más generales que permitan establecer una buena relación entre tweets con contenido machista y aquellos que no presentan este tipo de lenguaje. En este caso, se han seleccionado las siguientes expresiones: ``feminazi'', '``a la cocina'', '``a fregar'', ``marimacho'', ``ninata'', '``mujer tenias que ser'', '``las feministas'',``en tus dias'', ``zorra'','``como una mujer'', '``como una nina'', '``pareces una fulana'', '``pareces una puta'','``no ha probado un hombre'','``loca del'', '``obsesionada con el machismo'', '``para ser mujer'','``para ser chica'','``hombre que te aguante'','``acabaras sola'', ``mojigata'', '``mucho feminismo pero'','``mujer al volante'', '``las mujeres no deberian'', '``A las mujeres hay que'', '``odio a las mujeres'','``las mujeres de hoy en dia'', ``nenaza'', ``lagartona''.
 
+% https://www.tablesgenerator.com/
+% Please add the following required packages to your document preamble:
+% \usepackage{graphicx}
+\begin{table}[]
+	\centering
+	\resizebox{\textwidth}{!}{%
+		\begin{tabular}{lll}
+			Número de término & Texto                         &  \\
+			1                 & ``feminazi"                    &  \\
+			2                 & ``a la cocina"                 &  \\
+			3                 & ``a fregar"                    &  \\
+			4                 & ``marimacho"                   &  \\
+			5                 & ``ninata"                      &  \\
+			6                 & ``mujer tenias que ser"        &  \\
+			7                 & ``las feministas"              &  \\
+			8                 & ``en tus dias"                 &  \\
+			9                 & ``zorra"                       &  \\
+			10                & ``como una mujer"              &  \\
+			11                & ``como una nina"               &  \\
+			12                & ``pareces una fulana"          &  \\
+			13                & ``pareces una puta"            &  \\
+			14                & ``no ha probado un hombre"     &  \\
+			15                & ``loca del"                    &  \\
+			16                & ``obsesionada con el machismo" &  \\
+			17                & ``para ser mujer"              &  \\
+			18                & ``para ser chica"              &  \\
+			19                & ``hombre que te aguante"       &  \\
+			20                & ``acabaras sola"               &  \\
+			21                & ``mojigata"                    &  \\
+			22                & ``mucho feminismo pero"        &  \\
+			23                & ``mujer al volante"            &  \\
+			24                & ``las mujeres no deberian"     &  \\
+			25                & ``A las mujeres hay que"       &  \\
+			26                & ``odio a las mujeres"          &  \\
+			27                & ``las mujeres de hoy en dia"   &  \\
+			28                & ``nenaza"                      &  \\
+			29                & ``lagartona"                   & 
+		\end{tabular}%
+	}
+	\caption{Términos elegidos para corpus machista}
+	\label{my-label}
+\end{table}
+
 El término ?feminazi? es una forma de relacionar, de forma claramente despectiva, al feminismo con el nazismo. De este modo, es una palabra utilizada ampliamente en redes sociales y foros de toda España que conllevan actitudes machistas. En Twitter se encuentran mensajes como:
 
 	``\textit{Uy habló de inventos la feminazi}''
 	
 	
 	``\textit{Pero que violento!!! De cinco billetes, solo en uno aparece una mujer, esto es inaceptable!!! \#feminazi}''
+
+Sin embargo, existen otros ejemplos que se utiliza la expresión sin conllevar actitudes machistas:
+
+``\textit{Si quieres pensar que el origen del hashtag deviene de la búsqueda del rigor histórico, a tope. Estás en tu derecho, igual que yo en un texto de opinión de valorarlo totalmente al contrario. ¿No te convencen mis argumentos? Intentemos debatir. ¿Usas "feminazi"? Te quedas solo}''
+
+Los términos ``A la cocina'' y ``A fregar'' se utilizan de modo despectivo para denigrar a la mujer o restar importancia a sus argumentos. Como en el caso del término anterior, se ha comprobado que existe una relación aceptable entre mensajes machistas y aquellos que no conllevan estas actitudes. Algunos ejemplos de contenido machista:
+
+
+``\textit{Hay que anunciar por megafonia que te marches a tu casa a fregar  que estas  haciendo el ridículo .tu y las borregos}''
+
+
+``\textit{De los relatos corazon... anda a la cocina a hacee algo productivo antes de seguir diciendo pavadas}''
+
+Ejemplos que no expresan actitudes machistas:
+
+
+``\textit{Me dio sed, pero me da miedo ir a la cocina}''
+
+
+``\textit{Me molesta que a esta hora me dé hambre porque me da miedo ir a la cocina por algo para comer}''
+
+
+Las palabras ``Marimach'' y ``Niñata'' se utilizan como calificativos despectivos a la mujer. El primer término se emplea para indicar que una mujer tiene rasgos propios de hombre mientras que el segundo se emplea para denotar inmadurez. Ejemplos despectivos serían los tweets encontrados:
+
+
+``\textit{Es un travesti o una marimacho pasada de anabolicos?}''
+
+
+``\textit{Quien es esta puta niñata para exigir nada?}''
+
+
+Las expresiones ``Mujer tenías que ser'' y ``Las Feministas'' se utilizan para descalificar a las mujeres por el hecho de pertenecer a un colectivo. Ejemplos encontrados en Twitter son los siguientes:
+
+
+``\textit{Mujer tenias que ser para dar una respuesta tan pobre}''
+
+
+``\textit{Ya salieron las feministas a dar la cara x @ aunque se lo fuma ella sola a el gordo sucio  a su segunda @ la anorexica}''
+
+
+La expresión ``en tus días'' se utiliza como descalificativo para referirse a las mujeres por tener el periodo:
+
+
+
+``\textit{Estás insoportable en tus días.}''
+
+
+``\textit{Seguro era porque andabas en tus días. xd}''
+
+
+El término ?zorra? se utiliza continuamente en Twitter con actitudes machistas:
+
+
+
+``\textit{zorra se puede saber pork no me sigues?}''
+
+
+``\textit{No le presten atencion. como yo hago  a cualquier otro zorra}''
+
+Otra expresión que minusvalora a las mujeres es ``como una mujer'' para comparar una acción que se realiza peor por ser mujer:
+
+
+``\textit{Un hombre sin barba es como una mujer sin nalgas}''
+
+
+``\textit{\#UnMadrazoPara Cesar Gaviria, que habla como una mujer en proceso de parto.}''
+
+
+Otra expresión similar a la anterior sería ``como una niña'':
+
+
+``\textit{No te vas a ir de aquí sin decirme qué sitio es ese. Y más te vale responder y no comportarte como una niña pequeña, niña pequeña.}''
+
+
+El término ``nenaza'' se utiliza también como descalificativo en Twitter:
+
+``\textit{A mi me ha pasado igual. Los lobos vestidos de corderos que lo mismo quieren matar fachas que lloran como una nenaza no puedo con ellos}''
+
+``\textit{@marianorajoy ha perdido la Moncloa como una nenaza  porque no ha sabido defender como hombre y estadista a la Nación. Se va como los cobardes. Por la puerta de atrás. El peor presidente de España }''
+
+La expresión ``pareces una fulana'' se utiliza como descalificativo por la apariencia física de las mujeres:
+
+
+``\textit{Te acabo de ver en el Telenoticiasde TV3. Maquillate mejor, pareces una fulana.}''
+
+``\textit{¡Lávate esa cara que pareces una fulana!}''
+
+
+Otra expresión muy similar a la anterior sería ``pareces una puta'':
+
+
+``\textit{Deja de gritar hermano, pareces una puta}''
+
+``\textit{Por fin no pareces una puta paleta que habla sin mayúsculas}''
+
+
+Otra expresión machista utilizada en Twitter es ``no ha probado un hombre'':
+
+
+``\textit{que se pueda esperar de una mamerta  @ktikariza que no lee no estudia va a la provincia  tomar cerveza una millenian que no ha probado un hombre, el hambre o la guerra, estas juventud esta empecinada a decir y tener too regalado a costa de si }''
+
+``\textit{pobre mujer, no ha probado un hombre en su vida.}''
+
+La expresión ``loca del'' se utiliza de forma despectiva hacia las mujeres:
+
+``\textit{Rosa Díez o mejor llamada la loca del coño }''
+
+``\textit{Odio a esta clase de feministas, loca del coño.}''
+
+La frase ``obsesionada con el machismo'' se utiliza para restar importancia a la denuncia del machismo que realizan las mujeres:
+
+
+``\textit{YA no me gusta tanto como antes, lo siento, es una engreida, y le gusta buscar broncas, por la cara, de broma dice, y está obsesionada con el machismo. Desde que defiende en \#Supervivientes a Sofia, se califica sola. Me encantó su amistad con @LauraM\_SV ,hasta ahí!}''
+
+``\textit{En mi opinión estás un poco obsesionada con el machismo. Lo digo porque hasta citas mi tuit para que vean "mi machismo". Y como te digo, Jorge Mc, de seguro tu comenzaste a agredirlo. Supongo que estás en contra de los ambulantes también
+	Saludos }''
+
+Otra expresión que minusvalora las habilidades de la mujer sería ``para ser mujer'':
+
+
+``\textit{Tomarás hormonas para ser mujer?}''
+
+``\textit{La Pamela es como una comunista, siempre poniendo problemas.
+	Y malas relaciones.
+	Se cree dueña de la verdad.
+	Es una rota ordinaria, inculta .
+	Le falta mucho para ser mujer decente.
+	Qué la corten de la TV luego y contraten gente culta.
+	Además, está guatona y fea. 
+}''
+
+
+Otra expresión similar a la anterior sería ``para ser chica'':
+
+``\textit{Daniella Chávez solo quiere pantalla, si vas a vértigo sabes que eres parte de la rutina de yerko, ademas Daniella demostró en el capítulo que para lo único que sirve es para ser chica Playboy, y no soy machista, solo soy un simple espectador \#YerkoPuchento }''
+
+``\textit{Sos un poco masculina como para ser chica, ¿sabías?}''
+
+Otra expresión machista utilizada en Twitter es ``hombre que te aguante'':
+
+
+``\textit{Chingón el hombre que te aguante hasta en tus días. }''
+
+``\textit{Damaris, cásate con tu "marido (Ana)" porque no vas a encontrar un hombre que te aguante.}''
+
+
+Otra expresión machista utilizada en Twitter es ``acabaras sola'':
+
+
+``\textit{En fín, tu sigue así nena, que acabarás sola}''
+
+``\textit{Acabarás sola, vieja, con gatos y escuchando techno}''
+
+Otro insulto muy recurrente es ?mojigata?:
+
+
+``\textit{?\#EnLaPedaNuncaFalta la mojigata persinada que con 3 tequilas encima es más fácil que la tabla del 1. }''
+
+``\textit{Qué lindo que se le va cayendo la careta a la mojigata esa!!!!}''
+
+La expresión ``mucho feminismo pero'' se utiliza para minusvalorar el papel del feminismo en la sociedad:
+
+``\textit{?Pues menuda hija de mierda si tienes a tu padre cargando con TODAS las tareas del hogar. Mucho feminismo, pero de compartir las labores no te enseñó nada.}''
+
+``\textit{Mucho feminismo pero Christian Gray se las hace mojar qué tipo hdp este pibe jajaja}''
+
+La expresión ``mujer al volante'' se utiliza habitualmente para minusvalorar la capacidad de las mujeres para realizar una tarea:
+
+
+``\textit{por la prudencia con la que tomo la bajada creo que se trata de una mujer al volante }''
+
+``\textit{No hay nada más peligroso que una mujer al volante con prisa . Nada, ni MALO De presidente es tan peligroso}''
+
+
+Otra expresión que suele conllevar actitudes machistas ``las mujeres no debería'':
+
+
+``\textit{Las mujeres no deberían de tener ni voz ni voto, no están preparadas para mantener una familia menos un gobierno , son unas mantenidas}''
+
+``\textit{Por eso es que las mujeres no deberían tener derecho al voto}''
+
+La frase ``A las mujeres hay que'' se utiliza habitualmente para discriminarlas o tratarlas de un modo distinto por su género:
+
+
+``\textit{Como dice mi papá: ``a las mujeres hay que quererlas, no entenderlas''}''
+
+``\textit{Hoy en día a las mujeres hay que tenerle un cuidado cabron. Acuérdate que estamos en la era del chismin, la era mierdosa. Te da un abrazo y después dice que le rozaste la teta. Wao! Pero si nos abrazamos! Obvio que las tetas feas esas van a rozar cabrona!}''
+
+
+Otra expresión que suele conllevar actitudes machistas ``odio a las mujeres'':
+
+
+``\textit{Ok. Con esto la loca se gano a todas las femininazis. Apuesto cualquier cosa, que salen las feministas a una marcha diciendo que Macri odia a las mujeres. En EEUU tambien fue campaña con trump machista y su "odio a las mujeres". Asi se maneja la izquierda, campaña: odio}''
+
+``\textit{A lo que hemos llegado, lo unico que van a conseguir las feministas es el odio a las mujeres}''
+
+
+Otra expresión que suele conllevar actitudes machistas ``las mujeres de hoy en dia'':
+
+``\textit{Las mujeres de hoy en día son tan doble moral; no puedes decirle a una chica que trae el botón desabrochado de la blusa, por que se emperra y te tacha de pervertido, ah pero si no le dices te va peor. Tampoco es que sea un santo pero que no mamen. \#LaHubieraDejadoEnseñarTeta }''
+
+``\textit{Se enojan las mujeres de hoy en día que uno les diga que parecen hombres, más insensibles que una piedra y más inútiles en las actividades de a diario, puta no sean tan maletas prepárense, por lo menos yo hice mi obra hoy ya se defiende en un montón de áreas de nada...}''
+
+Por último, el insulto ``lagartona'' se utiliza de forma despectiva hacia las mujeres:
+
+``\textit{Trata de nublar la verdad esta lagartona, aparte super fea}''
+
+``\textit{No quiero depender de nadie. No soy una lagartona ni la zorrita de nadie, si no un hombre}''
 
 
 \section{Métricas de evaluación}
